Fix horizontal scroll bug

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -15,7 +15,7 @@
     font-weight: 400;
     line-height: 1.3;
     font-size: size.$font-large;
-    z-index: 1;
+    z-index: 2;
   }
 }
 
@@ -32,7 +32,7 @@
   overflow: visible;
 
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   height: 100%;
   bottom: -35%;
   right: -15%;
